fixed navbar overlapping account links issue.

--- a/pycon/static/less/site.less
+++ b/pycon/static/less/site.less
@@ -737,7 +737,7 @@ header.main {
         margin: 0;
         @media (min-width: @breakDesktop) {
           left: 20%;
-          width: 80%;
+          width: 62%;
         }
         li {
           border-bottom: 2px solid transparent;
@@ -1041,7 +1041,6 @@ body.home {
       .nav {
         margin: 0;
         @media (min-width: @breakDesktop) {
-          width: 92%;
           margin-left: 8%;
           left: 0;
         }
